<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Notes">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="arrowBackOption"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_arrow_back" />


        <ImageView
            android:id="@+id/deleteNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/voice_mess"
            android:onClick="deleteN"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_delete" />


        <ImageView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/add"
            android:padding="15dp"
            android:src="@drawable/ic_save" />


        <ImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_add" />


        <ImageView
            android:id="@+id/voice_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@id/add"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_voice_message" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:onClick="dismiss"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_close" />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/your_notes"
        android:textColor="@color/black"
        android:textSize="20sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:clickable="true"
            android:focusable="true"
            android:inputType="text"
            android:hint="@string/title"
            android:text="" />

    </LinearLayout>

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_text"
        android:inputType="date" />


</LinearLayout>