<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </RelativeLayout>

        <GridLayout

            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="8"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="15dp"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/d1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/purple_200"
                app:cardCornerRadius="30dp"
                app:cardElevation="8dp">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">


                    <ImageView

                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/icon2">

                    </ImageView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/shopping_list"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/purple_200"
                app:cardCornerRadius="30dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/icon2"></ImageView>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/other_obligations"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <!--work obligations-->

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/purple_200"
                app:cardCornerRadius="30dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/icon2">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/faculty_obligations"
                        android:textColor="@color/black"
                        android:textSize="12sp" />


                    <!--School/-->
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/purple_200"
                app:cardCornerRadius="30dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="85dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/icon2">

                    </ImageView>

                    <EditText
                        android:id="@+id/etUserInput10"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:autofillHints="@string/new_text"
                        android:backgroundTint="@color/black"
                        android:gravity="center"
                        android:hint="@string/title_category"
                        android:inputType="text"
                        android:maxLength="47"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="12sp">

                    </EditText>

                    <!--Important dates (birthdays, anniversaries etc.)-->

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </GridLayout>

    </LinearLayout>


</ScrollView>